--- a/index.html
+++ b/index.html
@@ -3,13 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Saya Belajar GIT</title>
+    <title>RjaGustav</title>
+
+    <style>.sub-header{
+        color: darkolivegreen;
+    }</style>
 </head>
+
 
 <body>
 
 <h1>Hello World!!</h1>
+<hr>
+<h3 class="text-center">WEB INI SEDANG DALAM PERBAIKAN</h3>
+<h6 class="sub-header">WEB By. Raja Gustav</h2>
 
-    
+
+
 </body>
 </html>
